--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "astro": "^2.2.1",
     "astro-useragent": "^2.0.0",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
