--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.0",
     "@astrojs/netlify": "^2.2.2",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/rss": "^2.4.0",
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.2",
     "@fontsource/iosevka": "^4.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
     "astro": "^2.2.1",
     "astro-useragent": "^2.0.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
