--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "tech-stack-icons": "^3.3.2"
   },
   "devDependencies": {
     "prettier": "2.8.8",
